--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "clsx": "^2.1.1",
+    "env": "^0.0.2",
     "formik": "^2.4.6",
     "next": "14.2.4",
     "react": "^18",
